--- a/browser.css
+++ b/browser.css
@@ -31,7 +31,7 @@ flex-direction: column;
 }
 .editor__nav{display: flex;background: #555;color: #58ffcd;align-items: center;padding: 0.5em;}
 
-textarea {padding: 1em;flex: 1;color: white;background-color: #333;border: none;outline: none;tab-size: 2;}
+textarea {padding: 1em;flex: 1;color: white;background-color: #333;border: none;outline: none;tab-size: 2;word-break: break-all;}
 button{
     background-color: #777;
     color: white;
